--- a/Depo/Depo/Presentation/UserStories/Start/Registration/View/Terms/RegistrationTermsInfoViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/Registration/View/Terms/RegistrationTermsInfoViewController.xib
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegistrationTermsInfoViewController" customModule="Billo" customModuleProvider="target">
             <connections>
-                <outlet property="bottomView" destination="tFV-pq-CRH" id="xGL-qR-DWG"/>
                 <outlet property="closeButton" destination="wqP-EQ-bdd" id="0Mg-ey-wIU"/>
                 <outlet property="confirmButton" destination="wJ2-y2-eJx" id="0v7-nW-2z6"/>
                 <outlet property="containerView" destination="OfJ-rq-wb5" id="xof-I0-y06"/>
                 <outlet property="popupHeightConstraint" destination="TAw-7e-v7W" id="y4J-JW-Qtd"/>
+                <outlet property="scrollView" destination="2MQ-qj-fo6" id="Mfp-Ig-DGw"/>
                 <outlet property="textView" destination="16S-4E-sIn" id="6uI-8Q-3vS"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -28,51 +28,55 @@
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OfJ-rq-wb5">
                     <rect key="frame" x="15" y="253" width="384" height="400"/>
                     <subviews>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="16S-4E-sIn">
+                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2MQ-qj-fo6">
                             <rect key="frame" x="0.0" y="0.0" width="384" height="400"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                            <color key="textColor" systemColor="labelColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                        </textView>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="tcD-wQ-E8s">
+                                    <rect key="frame" x="0.0" y="0.0" width="384" height="384"/>
+                                    <subviews>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="16S-4E-sIn" customClass="IntrinsicTextView" customModule="Billo" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="384" height="329"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" priority="250" constant="329" id="dGw-Yg-DRS"/>
+                                            </constraints>
+                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                            <color key="textColor" systemColor="labelColor"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wJ2-y2-eJx" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
+                                            <rect key="frame" x="58" y="329" width="268" height="55"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="55" id="5n0-0R-iUM"/>
+                                                <constraint firstAttribute="width" constant="268" id="A2N-Z6-NJl"/>
+                                            </constraints>
+                                            <state key="normal" title="Button"/>
+                                        </button>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="tcD-wQ-E8s" firstAttribute="top" secondItem="2MQ-qj-fo6" secondAttribute="top" id="DkE-o2-lRM"/>
+                                <constraint firstAttribute="trailing" secondItem="tcD-wQ-E8s" secondAttribute="trailing" id="Mso-WC-iXn"/>
+                                <constraint firstAttribute="bottom" secondItem="tcD-wQ-E8s" secondAttribute="bottom" constant="40" id="YXN-V4-meh"/>
+                                <constraint firstItem="tcD-wQ-E8s" firstAttribute="width" secondItem="2MQ-qj-fo6" secondAttribute="width" id="glZ-91-Atm"/>
+                                <constraint firstItem="tcD-wQ-E8s" firstAttribute="leading" secondItem="2MQ-qj-fo6" secondAttribute="leading" id="k3u-pe-18K"/>
+                            </constraints>
+                        </scrollView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wqP-EQ-bdd">
                             <rect key="frame" x="346" y="8" width="30" height="30"/>
                         </button>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tFV-pq-CRH">
-                            <rect key="frame" x="0.0" y="315" width="384" height="85"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wJ2-y2-eJx" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="58" y="15" width="268" height="55"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="55" id="5n0-0R-iUM"/>
-                                        <constraint firstAttribute="width" constant="268" id="A2N-Z6-NJl"/>
-                                    </constraints>
-                                    <state key="normal" title="Button"/>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstItem="wJ2-y2-eJx" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="tFV-pq-CRH" secondAttribute="leading" constant="20" id="EYe-fY-y94"/>
-                                <constraint firstAttribute="bottom" secondItem="wJ2-y2-eJx" secondAttribute="bottom" constant="15" id="HWu-a7-49r"/>
-                                <constraint firstItem="wJ2-y2-eJx" firstAttribute="centerX" secondItem="tFV-pq-CRH" secondAttribute="centerX" id="Hm4-XL-Xe3"/>
-                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="wJ2-y2-eJx" secondAttribute="trailing" constant="20" id="dSj-l5-HTL"/>
-                                <constraint firstItem="wJ2-y2-eJx" firstAttribute="top" secondItem="tFV-pq-CRH" secondAttribute="top" constant="15" id="r3q-Od-hYS"/>
-                            </constraints>
-                        </view>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="tFV-pq-CRH" secondAttribute="trailing" id="6zm-NK-v5K"/>
-                        <constraint firstAttribute="bottom" secondItem="16S-4E-sIn" secondAttribute="bottom" id="83N-zZ-ihj"/>
+                        <constraint firstAttribute="trailing" secondItem="2MQ-qj-fo6" secondAttribute="trailing" id="9h6-Uy-A4h"/>
                         <constraint firstAttribute="width" relation="lessThanOrEqual" constant="500" id="AXg-sq-eon"/>
-                        <constraint firstItem="16S-4E-sIn" firstAttribute="leading" secondItem="OfJ-rq-wb5" secondAttribute="leading" id="C0g-VZ-jva"/>
-                        <constraint firstItem="16S-4E-sIn" firstAttribute="top" secondItem="OfJ-rq-wb5" secondAttribute="top" id="EiB-ff-Fqp"/>
                         <constraint firstAttribute="height" priority="999" constant="400" id="TAw-7e-v7W"/>
                         <constraint firstAttribute="trailing" secondItem="wqP-EQ-bdd" secondAttribute="trailing" constant="8" id="bxy-kf-IHQ"/>
-                        <constraint firstAttribute="bottom" secondItem="tFV-pq-CRH" secondAttribute="bottom" id="fAK-TS-2zg"/>
-                        <constraint firstAttribute="trailing" secondItem="16S-4E-sIn" secondAttribute="trailing" id="fbg-Xx-PJy"/>
-                        <constraint firstItem="tFV-pq-CRH" firstAttribute="leading" secondItem="OfJ-rq-wb5" secondAttribute="leading" id="tP3-1b-za6"/>
+                        <constraint firstAttribute="bottom" secondItem="2MQ-qj-fo6" secondAttribute="bottom" id="cRL-S6-1l2"/>
+                        <constraint firstItem="2MQ-qj-fo6" firstAttribute="leading" secondItem="OfJ-rq-wb5" secondAttribute="leading" id="htt-39-NFO"/>
+                        <constraint firstItem="2MQ-qj-fo6" firstAttribute="top" secondItem="OfJ-rq-wb5" secondAttribute="top" id="thI-kM-zdT"/>
                         <constraint firstItem="wqP-EQ-bdd" firstAttribute="top" secondItem="OfJ-rq-wb5" secondAttribute="top" constant="8" id="yY5-pe-jTr"/>
                     </constraints>
                     <variation key="default">
