--- a/Depo/Depo/Presentation/UserStories/Settings/Invitation/AcceptedInvitationViewController/AcceptedInvitationViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Invitation/AcceptedInvitationViewController/AcceptedInvitationViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -11,32 +11,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AcceptedInvitationViewController" customModule="Billo" customModuleProvider="target">
             <connections>
+                <outlet property="acceptedCollectionView" destination="fn4-dU-WOy" id="qkw-W8-gQi"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accepted List" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Os-nZ-vrd">
-                    <rect key="frame" x="117.5" y="415.5" width="179" height="65"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="65" id="CsI-f1-IZn"/>
-                        <constraint firstAttribute="width" constant="179" id="WR6-4R-bTl"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="fn4-dU-WOy">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <color key="backgroundColor" red="0.98039215690000003" green="0.98039215690000003" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="15" minimumInteritemSpacing="0.0" id="U1X-r3-K79">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="30" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="0AT-b0-wrN"/>
+                        <outlet property="delegate" destination="-1" id="qul-jm-LUG"/>
+                    </connections>
+                </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="0Os-nZ-vrd" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="IsH-OV-dUU"/>
-                <constraint firstItem="0Os-nZ-vrd" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="cAU-Z8-6pp"/>
+                <constraint firstItem="fn4-dU-WOy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="DA5-pp-DgC"/>
+                <constraint firstItem="fn4-dU-WOy" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="VUo-dP-SbN"/>
+                <constraint firstAttribute="bottom" secondItem="fn4-dU-WOy" secondAttribute="bottom" id="oAq-e9-wvl"/>
+                <constraint firstItem="fn4-dU-WOy" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="wex-Er-8Kb"/>
             </constraints>
-            <point key="canvasLocation" x="131.8840579710145" y="130.58035714285714"/>
+            <point key="canvasLocation" x="-514" y="46"/>
         </view>
     </objects>
     <resources>
