--- a/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationCampaignDetailView/InvitationCampaignDetailView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Invitation/InvitationCampaignDetailView/InvitationCampaignDetailView.xib
@@ -12,6 +12,9 @@
         <array key="TurkcellSaturaBol.ttf">
             <string>TurkcellSaturaBol</string>
         </array>
+        <array key="TurkcellSaturaMed.ttf">
+            <string>TurkcellSaturaMed</string>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -42,11 +45,11 @@
                                 <constraint firstAttribute="trailing" secondItem="giN-7V-UVh" secondAttribute="trailing" id="xQY-IY-nii"/>
                             </constraints>
                         </view>
-                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LRJ-yk-Avq">
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LRJ-yk-Avq">
                             <rect key="frame" x="9" y="149" width="296" height="332"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <color key="textColor" systemColor="labelColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="fontDescription" name="TurkcellSaturaMed" family="TurkcellSaturaMed" pointSize="12"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HRe-eH-6H8">
@@ -125,9 +128,6 @@
         </view>
     </objects>
     <resources>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
